--- a/ll_project/learning_logs/templates/learning_logs/index.html
+++ b/ll_project/learning_logs/templates/learning_logs/index.html
@@ -1,7 +1,7 @@
 {% extends "learning_logs/base.html" %}
 
 {% block content %}
-<p>Learning Log helps you keep track of your learning,
+<p>Learning_Log helps you keep track of your learning,
 	for any topic you're interested in.</p>
 {% endblock %}
 
