modified:   ll_project/db.sqlite3 	new file:   ll_project/learning_logs/__pycache__/forms.cpython-311.pyc 	modified:   ll_project/learning_logs/__pycache__/urls.cpython-311.pyc 	modified:   ll_project/learning_logs/__pycache__/views.cpython-311.pyc 	modified:   ll_project/learning_logs/forms.py 	new file:   ll_project/learning_logs/templates/learning_logs/new_entry.html 	new file:   ll_project/learning_logs/templates/learning_logs/new_topic.html 	modified:   ll_project/learning_logs/templates/learning_logs/topic.html 	modified:   ll_project/learning_logs/templates/learning_logs/topics.html 	modified:   ll_project/learning_logs/urls.py 	modified:   ll_project/learning_logs/views.py

--- a/ll_project/learning_logs/templates/learning_logs/topics.html
+++ b/ll_project/learning_logs/templates/learning_logs/topics.html
@@ -2,18 +2,21 @@
 
 {% block content %}
 
-<p>Topics</p>
+<a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
+
 <p>Here are the topics you can explore in the Learning_Log:</p>
 
 <ul>
 	{% for topic in topics %}
 	<li>
 		<a href="{% url 'learning_logs:topic' topic.id %}">
-		{{ topic.text }}</a>
+			{{ topic.text }}</a>
 	</li>
 	{% empty %}
 	<li>No topics available.</li>
 	{% endfor %}
 </ul>
+
+
 
 {% endblock content %}
