--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -3,4 +3,12 @@
 	<a href="{% url 'learning_logs:topics' %}">Topics</a>
 </p>
 
+<p>
+	{% if user.is_authenticated %}
+	Hello, {{ user.username }}.
+	{% else %}
+	<a href="{% url 'accounts:login' %}">Log in</a>
+	{% endif %}
+</p>
+
 {% block content %}{% endblock content %}
