实现用户注册系统，更新相关视图和模板

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -9,7 +9,7 @@
     <form action="{% url 'accounts:login' %}" method="post">
         {% csrf_token %}
         {{ form.as_div }}
-        <button type="submit">Log in</button>
+        <button name="submit">Log in</button>
     </form>
 
 {% endblock content %}
