--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,22 +1,25 @@
 {% extends 'learning_logs/base.html' %}
 
+{% block page_header %}
+<h1>Topics</h1>
+{% endblock page_header %}
+
 {% block content %}
 
-<a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
 
-<p>Here are the topics you can explore in the Learning_Log:</p>
+<h5>Here are the topics you can explore in the Learning_Log:</h5>
 
-<ul>
+<ul class="list-group border-bottom pb-2 mb-4">
 	{% for topic in topics %}
-	<li>
+	<li class="list-group-item border-0">
 		<a href="{% url 'learning_logs:topic' topic.id %}">
 			{{ topic.text }}</a>
 	</li>
 	{% empty %}
-	<li>No topics available.</li>
+	<li class="list-group-item border-0">No topics available.</li>
 	{% endfor %}
 </ul>
 
-
+<a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
 
 {% endblock content %}
