--- a/learning_logs/templates/learning_logs/edit_topic.html
+++ b/learning_logs/templates/learning_logs/edit_topic.html
@@ -1,4 +1,9 @@
 {%extends 'learning_logs/base.html'%}
+{% load django_bootstrap5 %}
+
+{% block page_header %}
+<h2>Edit topic for topic: {{topic.text}}</h2>
+{% endblock page_header %}
 
 {% block content %}
 
@@ -6,8 +11,8 @@
 
 <form action="{% url 'learning_logs:edit_topic' topic.id %}" method="post">
 	{% csrf_token %}
-	{{ form.as_div }}
-	<button name="submit">Save changes</button>
+	{% bootstrap_form form %}
+	{% bootstrap_button button_type="submit" content="Save changes" %}
 </form>
 
 {% endblock content %}
